# kuma-lio

./: .gitignore  CMakeLists.txt
app/: run_mapping_offline.cc  run_mapping_online.cc
cmake/: packages.cmake
config/: BotanicGarden.yaml  Hilti2021.yaml  Hilti2022.yaml  MCD_VIRAL_ATV.yaml  MCD_VIRAL_HandHeld.yaml  New_College.yaml  botanic_garden.yaml  fast_livo2.yaml  fast_livo2_1.yaml  fast_livo2_2.yaml  hilti_2022.yaml  kitti.yaml  mcd_viral_atv.yaml  mcd_viral_handheld.yaml  new_college.yaml  urban_loco.yaml
config/calibration/: config_outdoor.yaml
include/: Sfm_Data.h  ba_cost_functions.h  bareg.h  common_lib.h  cost_functions.h  database.h  global_optimizor.h  imu_processing.hpp  laser_mapping.h  lidar_simulator.h  point_cluster.h  pointcloud_preprocess.h  pose3.h  reconstruction.h  so3_math.h  stamp_pose.h  state.h  types.h  union_find.h  use-ikfom.hpp  voxel_map.h
include/cameras/: camera_base.h  cameras.h  pinhole_brown_camera.h  pinhole_camera.h  pinhole_fisheye_camera.h  pinhole_radial.h  pinhole_radial_camera.h  spherial_camera.h
include/utils/: backward.h
lidar_camera_calibration/: common.h  lidar_camera_calib.cpp  lidar_camera_calib.hpp  lidar_camera_calib_impl.cpp  lidar_processor.cpp  lidar_processor.hpp
result/: Botanic_Garden_test.py  MCD_VIRAL_merge.sh  MCD_VIRAL_test.py  calibration_test.py  colmap.py  compare.py  kitti_download.py  plot_time.py  rosbag_extract.py  rosbag_merge.py  slam_test.py
src/: ba_cost_functions.h  bareg.h  bareg_test.cc  camera_test.cpp  color_points.cpp  common_lib.h  database.cpp  database.h  eskf.h  global_optimizor.cpp  global_optimizor.h  hash_octree.cpp  hash_octree.h  hash_octree_test.cc  imu_process.cpp  imu_processing.hpp  kitti_to_bag.cpp  laser_mapping.cc  laser_mapping.h  laser_mapping_callbacks.cc  laser_mapping_init.cc  laser_mapping_param.h  laser_mapping_publish.cc  lidar_sim_test.cc  lidar_simulator.h  lvba.cpp  offline_global_mapping.cpp  options.cc  options.h  pointcloud_preprocess.cc  pointcloud_preprocess.h  points_color.cpp  points_jet.cpp  points_merge.cpp  pose3.cpp  pose3.h  s2.h  sfm_data.cpp  sfm_data.h  so3_math.h  (+8 more)
src/cameras/: camera_base.h  cameras.h  pinhole_camera.h  pinhole_fisheye_camera.h  spherial_camera.h
src/livox_ros_driver/: CustomMsg.h  CustomPoint.h
